--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://rsms.me/inter/inter.css');
+* { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  * { font-family: 'Inter var', sans-serif; }
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
